# praymodoro

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  forge.config.ts  package-lock.json  package.json  webpack.plugins.ts  webpack.renderer.config.ts
.github/workflows/: CLAUDE.md  build.yml  update-homebrew.yml
dist-tauri/: index.html  menu.html
src/: CLAUDE.md  Cargo.toml  build-macos.sh  index.html  index.ts  preload.ts  renderer.ts
src-egui/: .gitignore
src-egui/macos/: Info.plist
src-egui/src/: app.rs  main.rs  settings.rs  timer.rs  tray.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/assets/icons/: Praymodoro.icns
src/main/: custom-menu-manager.ts  index.js  ipc-handlers.ts  settings-manager.ts  time-controller.ts  tray-manager.ts  window-manager.ts
src/menu/: menu-preload.ts  menu-renderer.ts  menu.html
src/preload/: preload.ts
src/renderer/: index.html  renderer.ts  styles.css
src/shared/: constants.ts  types.ts
src/src/: app.rs  main.rs  settings.rs  state.rs  timer.rs  tray.rs
src/windows/: installer.iss
