[package]
name = "praymodoro"
version = "1.0.2"
description = "A prayerful Pomodoro timer"
authors = ["John VonDrashek"]
license = "MIT"
repository = "https://github.com/JohnVonDrashek/praymodoro-forge"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "praymodoro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-store = "2"
chrono = "0.4"
window-vibrancy = "0.5"
